k8s/apps/monitoring/grafana/release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        np-internet: allow
        np-internal: allow # for oidc
        np-ingress-controller-web: allow
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          volumeMounts:
            - name: grafana-storage-volume
              mountPath: /var/lib/grafana
          ports:
            - name: web
              containerPort: 3000
        - name: grafana-renderer
          image: grafana/grafana-image-renderer
      volumes:
        - name: grafana-storage-volume
          persistentVolumeClaim:
            claimName: grafana-data
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: grafana
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`graph.REDACTED`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: REDACTED-cert
